--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "change-case": "^4.1.2",
+    "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "numeral": "^2.0.6",
     "react": "^18.2.0",
