--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "change-case": "^4.1.2",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
+    "faker": "^6.6.6",
+    "lodash": "^4.17.21",
     "numeral": "^2.0.6",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
@@ -50,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "Faker": "^0.7.2"
   }
 }
